--- a/manifest.json
+++ b/manifest.json
@@ -10,9 +10,9 @@
     "tabs"
   ],
   "browser_action": {
-    "default_popup": "popup.html"
+    "default_popup": "index.html"
   },
   "chrome_url_overrides": {
-    "newtab": "popup.html"
+    "newtab": "index.html"
   }
 }
